--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "frontend": "live-server frontend/public --port=5173 --no-browser",
     "dev:all": "concurrently \"npm run dev\" \"npm run frontend\"",
     "smoke": "node scripts/smoke.js",
-    "build:frontend": "node build-frontend.cjs",
-    "dev:frontend": "node build-frontend.cjs --watch"
+  "build:frontend": "node build-frontend.cjs",
+  "dev:frontend": "node build-frontend.cjs --watch",
+  "clean:tools": "node scripts/clean-tools.js"
   },
   "keywords": [
     "tools",
@@ -34,7 +35,8 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "pdfkit": "^0.13.0",
-    "sqlite3": "^5.1.6"
+  "sqlite3": "^5.1.6",
+  "nodemailer": "^6.9.15"
   },
   "devDependencies": {
     "concurrently": "^9.2.1",
